@@ -1,29 +1,40 @@
-desabilidata deu isso:
+xa
+/
+Repos
+/
+Files
+/
+
+SIMPG-jboss
+Search
 
 
-/opt/jboss/bin/standalone.conf: line 37: =org.jboss.byteman: command not found
-=========================================================================
+Caixa
 
-  JBoss Bootstrap Environment
+Overview
 
-  JBOSS_HOME: /opt/jboss
+Boards
 
-  JAVA: /usr/lib/jvm/jre-17-openjdk-17.0.7.0.7-3.el8.x86_64/bin/java
+Repos
+Files
+Commits
+Pushes
+Branches
+Tags
+Pull requests
 
-  JAVA_OPTS:  -Xlog:gc*:file="/opt/jboss/standalone/log/gc.log":time,uptimemillis:filecount=5,filesize=3M -Djdk.serialFilter="maxbytes=10485760;maxdepth=128;maxarray=100000;maxrefs=300000" -Xms512m -Xmx1024m -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -Djava.net.preferIPv4Stack=true -Djboss.modules.system.pkgs= -Djava.awt.headless=true -Djavax.net.ssl.trustStore=/opt/jboss/standalone/configuration/caixa-truststore-acteste-nprd.jks -Djavax.net.ssl.trustStorePassword=changeit -Djboss.modules.policy-permissions=true -Xbootclasspath/a:/opt/jboss/modules/system/layers/base/org/jboss/logmanager/main/jboss-logmanager-2.1.18.Final-redhat-00001.jar:/opt/jboss/modules/system/layers/base/org/jboss/log4j/logmanager/main/log4j-jboss-logmanager-1.2.0.Final-redhat-00001.jar:/opt/jboss/modules/system/layers/base/org/wildfly/common/main/wildfly-common-1.5.4.Final-redhat-00001.jar -Djboss.modules.system.pkgs=org.jboss.byteman,org.jboss.logmanager -Djava.util.logging.manager=org.jboss.logmanager.LogManager -Dsun.util.logging.disableCallerCheck=true -server -XX:+ExplicitGCInvokesConcurrent -XX:+UseG1GC -XX:MaxGCPauseMillis=500 -javaagent:/opt/jmx_exporter/jmx_prometheus.jar=8778:/opt/jmx_exporter/jmx_prometheus.yaml -Djava.net.useSystemProxies=false -Dhttp.proxyHost=80 -Dhttp.proxyPort=proxy.des.caixa -Dhttps.proxyHost=80 -Dhttps.proxyPort=proxy.des.caixa -Dhttp.nonProxyHosts=localhost\|127.0.0.1\|*.caixa  --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED --add-exports=java.desktop/sun.awt=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.management/javax.management=ALL-UNNAMED --add-opens=java.naming/javax.naming=ALL-UNNAMED
+Pipelines
 
-=========================================================================
+Test Plans
 
-Jun 29, 2026 12:46:01 PM java.lang.System$LoggerFinder lambda$accessProvider$0
-WARNING: Failed to instantiate LoggerFinder provider; Using default.
-[0m12:46:01,442 INFO  [org.jboss.modules] (main) JBoss Modules version 1.12.2.Final-redhat-00001
-[0m[0m12:46:01,942 INFO  [org.jboss.msc] (main) JBoss MSC version 1.4.12.Final-redhat-00001
-[0m[0m12:46:01,946 INFO  [org.jboss.threads] (main) JBoss Threads version 2.4.0.Final-redhat-00001
-[0m[0m12:46:02,131 INFO  [org.jboss.as] (MSC service thread 1-2) WFLYSRV0049: JBoss EAP 7.4.14.GA (WildFly Core 15.0.32.Final-redhat-00001) starting
-[0m[0m12:46:02,233 INFO  [org.jboss.vfs] (MSC service thread 1-2) VFS000002: Failed to clean existing content for temp file provider of type temp. Enable DEBUG level log to find what caused this
-[0m[0m12:46:03,838 INFO  [org.wildfly.security] (ServerService Thread Pool -- 29) ELY00001: WildFly Elytron version 1.15.20.Final-redhat-00001
-[0m[0m12:46:04,329 INFO  [org.jboss.as.controller.management-deprecated] (ServerService Thread Pool -- 11) WFLYCTL0033: Extension 'security' is deprecated and may not be supported in future versions
-[0m[31m12:46:05,055 ERROR [org.jboss.as.controller.management-operation] (Controller Boot Thread) WFLYCTL0013: Operation ("add") failed - address: ([("core-service" => "vault")]) - failure description: "WFLYSRV0287: The resource 'vault' is unsupported since Java 14"
-[0m[31m12:46:05,056 FATAL [org.jboss.as.server] (Controller Boot Thread) WFLYSRV0056: Server boot has failed in an unrecoverable manner; exiting. See previous messages for details.
-[0m[0m12:46:05,121 INFO  [org.jboss.as] (MSC service thread 1-2) WFLYSRV0050: JBoss EAP 7.4.14.GA (WildFly Core 15.0.32.Final-redhat-00001) stopped in 62ms
-[0m
+Artifacts
+Project settings
+SIMPG-jboss
+
+.sts4-cache
+24803958
+src
+.gitattributes
+pom.xml
+README.md
+sonar-project.properties
